dinoco_docs/src/content/v0.0.1/zh-cn/orm/update.mdx
export const title = "update";

# update

用于更新过滤后的记录。

---

## 您可以做什么

- `.cond(...)`: 定义哪些记录将被更新。
- `.values(item)`: 指定记录的新值。
- `.connect(...)`: 创建支持写入的关系链接。
- `.disconnect(...)`: 移除支持写入的关系链接。
- `.returning::\<T\>()`: 以类型化投影返回更新后的记录。
- `.execute(&client)`: 在数据库中执行更新。

## 返回值

如果没有 `.returning::\<T\>()`，返回值为：

```rust
DinocoResult<()>
```

如果有 `.returning::\<T\>()`，返回值将是：

```rust
DinocoResult<Vec<T>>
```

注意：

- `update().returning()` 不支持与 `.connect(...)` 或 `.disconnect(...)` 进行关系写入。

## 字段更新示例

```rust
dinoco::update::<User>()
    .cond(|w| w.id.eq(10))
    .values(User {
        id: 10,
        email: "novo@acme.com".to_string(),
        name: "新名称".to_string(),
    })
    .execute(&client)
    .await?;
```

## `connect(...)` 示例

用于连接支持写入的关系，通常是多对多关系。

```rust
dinoco::update::<User>()
    .cond(|w| w.id.eq(10))
    .connect(|r| r.roles().slug.eq("admin"))
    .execute(&client)
    .await?;
```

## `disconnect(...)` 示例

用于断开关系。

```rust
dinoco::update::<User>()
    .cond(|w| w.id.eq(10))
    .disconnect(|r| r.roles().slug.eq("guest"))
    .execute(&client)
    .await?;
```

## `connect` 和 `disconnect` 中可用的过滤器

- `eq`
- `neq`
- `gt`
- `gte`
- `lt`
- `lte`
- `in_values`
- `not_in_values`
- `is_null`
- `is_not_null`
- `includes`
- `starts_with`
- `ends_with`

## 下一步

- [**`update_many::\<M\>()`**](/v0.0.1/orm/update-many): 批量更新。
- [**`find_and_update::\<M\>()`**](/v0.0.1/orm/find-and-update): 带返回值的原子更新。
